--- a/src/app/users/user-list/user-list.component.html
+++ b/src/app/users/user-list/user-list.component.html
@@ -1,1 +1,54 @@
-<p>user-list works!</p>
+<mat-form-field>
+  <input
+    matInput
+    (input)="applyFilter()"
+    placeholder="Filter"
+    [(ngModel)]="filterValue"
+  />
+</mat-form-field>
+
+<mat-table [dataSource]="users.filteredData" matSort>
+  <!-- Nom Column -->
+  <ng-container matColumnDef="name">
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
+    <mat-cell *matCellDef="let user">{{ user.name }}</mat-cell>
+  </ng-container>
+
+  <!-- Email Column -->
+  <ng-container matColumnDef="email">
+    <mat-header-cell *matHeaderCellDef mat-sort-header>Email</mat-header-cell>
+    <mat-cell *matCellDef="let user">{{ user.email }}</mat-cell>
+  </ng-container>
+
+  <!-- Occupation Column -->
+  <ng-container matColumnDef="occupation">
+    <mat-header-cell *matHeaderCellDef mat-sort-header
+      >Occupation</mat-header-cell
+    >
+    <mat-cell *matCellDef="let user">{{ user.occupation }}</mat-cell>
+  </ng-container>
+
+  <!-- Actions Column -->
+  <ng-container matColumnDef="actions">
+    <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
+    <mat-cell *matCellDef="let user">
+      <!--<button mat-icon-button (click)="showDetails(user)">
+        <mat-icon>visibility</mat-icon>
+      </button>
+      <button mat-icon-button (click)="editUser(user)">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button (click)="deleteUser(user)">
+        <mat-icon>delete</mat-icon>
+      </button>-->
+    </mat-cell>
+  </ng-container>
+
+  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
+</mat-table>
+
+<mat-paginator
+  [pageSizeOptions]="[5, 10, 25, 100]"
+  showFirstLastButtons
+></mat-paginator>
