--- a/src/app/users/single-user/single-user.component.html
+++ b/src/app/users/single-user/single-user.component.html
@@ -1,3 +1,5 @@
+<h1 class="title">User Details</h1>
+
 <div *ngIf="user != null" class="list">
     <div class="item">
         <span>Name :</span>
@@ -17,4 +19,4 @@
     </div>
 </div>
 
-<a routerLink="/users" class="btn">Back</a>
+<app-home-button />
