adding title component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,5 @@
-<a mat-raised-button routerLink="/add">Add User</a>
-<app-user-list></app-user-list>
+<app-title title="Rémi JARA RA2B"/>
+<div class="container">
+    <a mat-raised-button routerLink="/add">Add User</a>
+    <app-user-list></app-user-list>
+</div>
