--- a/src/app/users/add-user/add-user.component.html
+++ b/src/app/users/add-user/add-user.component.html
@@ -1,3 +1,5 @@
+<app-title title="Add User"/>
+
 <form (ngSubmit)="addUser()" #userForm="ngForm" class="form-style">
     <mat-form-field>
         <mat-label>Name</mat-label>
