--- a/src/app/users/single-user/single-user.component.html
+++ b/src/app/users/single-user/single-user.component.html
@@ -1,4 +1,4 @@
-<h1 class="title">User Details</h1>
+<app-title title="User Details"/>
 
 <div *ngIf="user != null" class="list">
     <div class="item">
