--- a/src/app/users/update-user/update-user.component.html
+++ b/src/app/users/update-user/update-user.component.html
@@ -1,3 +1,5 @@
+<app-title title="Update User"/>
+
 <form (ngSubmit)="updateUser()" *ngIf="user" #userForm="ngForm" class="form-style">
     <mat-form-field>
         <mat-label>Name</mat-label>
