--- a/src/app/users/add-user/add-user.component.css
+++ b/src/app/users/add-user/add-user.component.css
@@ -1,7 +1,7 @@
 .form-style {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     margin: 20px;
     width: 100%;
 }
